2343 [x264] fixed wrong detection of errors if file name contains "error"
2342 [OneClick] enhanced error handling

Changelog 2308 --> 2341

Features/Changes:
[x264] extended apple device profile support and removed/merged some others
[x264] added vbv restrictions based on the selected AVC level
[OneClick] improved muxing into intermediate MKV
[MKV Muxer] improved playback performance with some players (requires MkvMerge 5.9.0+)

Enhancements/Fixes:
[AVS Script Creator] fixed missing DAR values in the AVS script if using "Clever (TM) anamorphic encoding"
[File Indexer] enhanced index file selection behavior
[MKV Muxer] enhanced projected file size calculation if using intermediate MKV files
[OneClick] enhanced generation of demux file names
[OneClick] fixed a problem when aborting during automatic deinterlacing
[OneClick] fixed audio delay handling if pgcdemux will be used together with an intermediate MKV file
[OneClick] fixed AVS audio processing. Bug #711
[OneClick] fixed missing subtitle tracks if using intermediate MKV files. Bug #710
[OneClick] fixed not removing chapter option if selected input file has no internal chapters
[OneClick] improved working path detection
[OneClick] modified "and open next" behavior
[OneClick] not correctly extracted subtitle files will be ignored
[OneClick] set "Force using Key-Frames for chapters marks" even if "Don't encode video" is checked
[OneClick] the audio track encode selection will not be disabled anymore
[x264] added "stillimage" to the psy tunings and moved "zerolatency" and "fastdecode" to the misc tab
[x264] added AVC levels 1b and 5.2
[x264] log enhancement
[x264] set default --crf value to 23


Changelog 2296 --> 2308

Features/Changes:
[AVS Script Creator] removed cropping limit
[MP4 Muxer] allow Nero & Apple Chapters styles muxing for better interoperability with players. Patch by Eli Bildirici (#66)

Enhancements/Fixes:
[AVS Script Creator] added detailed analysis result to the log